@@ -81,7 +81,7 @@
 .SH NAME
 qstat \- show status of pbs batch jobs
 .SH SYNOPSIS
-qstat [\-f [\-1]][\-W site_specific] [\^job_identifier... | destination...\^]
+qstat [\-f [\-1]] [\-W site_specific] [\-x] [\^job_identifier... | destination...\^]
 .sp
 qstat [\-a|-i|-r|-e] [\-n [\-1]] [\-s] [\-G|-M] [\-R] [\-u user_list] [\^job_identifier... |\ 
 destination...\^]
@@ -189,6 +189,10 @@ the alternative format.
 .IP "\-B" 10
 Specifies that the request is for batch server status and that the operands
 are the names of servers.
+.IP "\-x" 10
+Specifies that the output is to be displayed in XML form.  This option is only
+valid with the \-f option or by itself, which will also specify the \-f full status
+display.
 .LP
 .SH  OPERANDS
 If neither the
